-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 12, 13
-
Component/s: hotspot
-
b02
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8216115 | 12.0.1 | Lutz Schmidt | P4 | Resolved | Fixed | master |
| JDK-8215723 | 12 | Lutz Schmidt | P4 | Resolved | Fixed | b26 |
| JDK-8243355 | 11.0.8-oracle | Lutz Schmidt | P4 | Resolved | Fixed | b04 |
| JDK-8243960 | 11.0.8 | Lutz Schmidt | P4 | Resolved | Fixed | b01 |
This will not lead to a compile time or runtime error, but print misleading information in method::print_code_comment_on().
- backported by
-
JDK-8215723 Missing case label in nmethod::reloc_string_for()
-
- Resolved
-
-
JDK-8216115 Missing case label in nmethod::reloc_string_for()
-
- Resolved
-
-
JDK-8243355 Missing case label in nmethod::reloc_string_for()
-
- Resolved
-
-
JDK-8243960 Missing case label in nmethod::reloc_string_for()
-
- Resolved
-