8215551: Missing case label in nmethod::reloc_string_for()

Reviewed-by: kvn, mbaesken